--- a/productos/productos.html
+++ b/productos/productos.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <html>
 	<head>
 		<meta charset="UTF-8">
@@ -8,11 +10,11 @@
 	<body>
 		<header class="header-products">
 			<div class="nav-banner">
-				<a href="#"><img class="logo" src="../img/lailuminada.png"></a>
+				<a href="../index.html"><img class="logo" src="../img/lailuminada.png"></a>
 				<nav class="header-nav">
 					<ul class="first-nav">
 			            <li class="first-li"><a href="../index.html">Inicio</a></li>
-			            <li class="first-li"><a href="#">Productos</a>
+			            <li class="first-li"><a href="../index.html#product">Productos</a>
 				            <ul class="sub-menu">
 				            	<li><a href="productos.html">Todos los Productos</a></li>
 					            <li><a href="luces-exterior.html">Luces de Exterior</a></li>
@@ -22,8 +24,8 @@
 				            </ul>
 			            </li>
 			            <li class="first-li"><a href="../proyectos/proyectos.html">Proyectos</a></li>
-			            <li class="first-li"><a href="#">Noticias</a></li>
-			            <li class="first-li"><a href="#">Contactos</a></li>
+			            <li class="first-li"><a href="../index.html#news">Noticias</a></li>
+			            <li class="first-li"><a href="../index.html#message">Contactos</a></li>
 	          		</ul>
 	          	</nav>
           	</div>
@@ -33,7 +35,7 @@
 			    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean rutrum, urna eget rhoncus congue, augue erat porttitor purus, non iaculis tellus ex eget metus. Consectetur adipiscing elit.
 				Nullam eu orci placerat, posuere augue vehicula, semper leo. Pellentesque tincidunt euismod massa eu rhoncus. Donec mattis ante in consectetur congue. Aliquam elementum pharetra quam faucibus accumsan.</p>
 				<p> Maecenas massa odio, ornare a condimentum id, egestas sed libero. Aenean sit amet risus sed nisi consequat molestie eget non mi. Vivamus faucibus lacinia ex. Ut commodo sit amet nulla non auctor. Praesent sit amet rhoncus nisi, et imperdiet metus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-			</div><!-- title-header -->
+			</div><!-- subsection title-header-subsection -->
 		</header>
 		<section class="subsection subsection-products">
 			<h2>Todos los Productos</h2>
@@ -48,7 +50,7 @@
 					<div class="div-information">
 						<h3>Circle Bell</h3>
 						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
-						<a href="">Ver más</a>
+						<a href="producto/lampara1.html">Ver más</a>
 					</div>
 				</div><!-- div-cat-principal -->
 				<div class="div-cat div-cat-principal">
@@ -58,7 +60,7 @@
 					<div class="div-information">
 						<h3>Circle Bell Dúo</h3>
 						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
-						<a href="">Ver más</a>
+						<a href="producto/lampara1.html">Ver más</a>
 					</div>
 				</div><!-- div-cat-principal -->
 				<div class="div-cat div-cat-principal">
@@ -68,7 +70,7 @@
 					<div class="div-information">
 						<h3>Grass Air</h3>
 						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
-						<a href="">Ver más</a>
+						<a href="producto/lampara1.html">Ver más</a>
 					</div>
 				</div><!-- div-cat-principal -->
 				<div class="div-cat div-cat-principal">
@@ -78,7 +80,7 @@
 					<div class="div-information">
 						<h3>Zodiac Led</h3>
 						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
-						<a href="">Ver más</a>
+						<a href="producto/lampara1.html">Ver más</a>
 					</div>
 				</div><!-- div-cat-principal -->
 				<div class="div-cat div-cat-principal">
@@ -88,7 +90,7 @@
 					<div class="div-information">
 						<h3>Sally Iluminate</h3>
 						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
-						<a href="">Ver más</a>
+						<a href="producto/lampara1.html">Ver más</a>
 					</div>
 				</div><!-- div-cat-principal -->
 				<div class="div-cat div-cat-principal">
@@ -98,7 +100,7 @@
 					<div class="div-information">
 						<h3>Sanjay Tan</h3>
 						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
-						<a href="">Ver más</a>
+						<a href="producto/lampara1.html">Ver más</a>
 					</div>
 				</div><!-- div-cat-principal -->
 				<div class="div-cat div-cat-principal">
@@ -108,7 +110,7 @@
 					<div class="div-information">
 						<h3>Circle Red Dention</h3>
 						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
-						<a href="">Ver más</a>
+						<a href="producto/lampara1.html">Ver más</a>
 					</div>
 				</div><!-- div-cat-principal -->
 				<div class="div-cat div-cat-principal">
@@ -118,23 +120,23 @@
 					<div class="div-information">
 						<h3>Circle Post</h3>
 						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
-						<a href="">Ver más</a>
+						<a href="producto/lampara1.html">Ver más</a>
 					</div>
 				</div><!-- div-cat-principal -->
 			</div>
-		</section>
+		</section><!-- subsection subsection-products -->
 		<footer>
 			<div class="contacts">
 				<p><a href="#">(000) 0000-0000</a><br/>
 				<a href="#">(111) 1111-1111</a></p>
 				<p><a href="#">lailuminada@gmail.com</a></p>
 			</div>
-			<a href="#" class="logo-central"><img class="logo-footer" src="../img/lailuminada.png"></a>
+			<a href="../index.html" class="logo-central"><img class="logo-footer" src="../img/lailuminada.png"></a>
 			<div class="social-network">
 				<ul>
-					<li class="foot-facebook"><a href="#">Facebook</a></li>
-					<li class="foot-twiter"><a href="#">Twitter</a></li>
-					<li class="foot-facebook"><a href="#">Other</a></li>
+					<li class="foot-facebook"><a href="https://es-es.facebook.com/">Facebook</a></li>
+					<li class="foot-twiter"><a href="https://twitter.com/?lang=es">Twitter</a></li>
+					<li class="foot-facebook"><a href="https://es-es.facebook.com/">Other</a></li>
 				</ul>
 			</div>
 		</footer>
