--- a/proyectos/proyectos.html
+++ b/proyectos/proyectos.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <html>
 	<head>
 		<meta charset="UTF-8">
@@ -12,7 +14,7 @@
 				<nav class="header-nav">
 					<ul class="first-nav">
 			            <li class="first-li"><a href="../index.html">Inicio</a></li>
-			            <li class="first-li"><a href="#">Productos</a>
+			            <li class="first-li"><a href="../index.html#product">Productos</a>
 				            <ul class="sub-menu">
 				            	<li><a href="../productos/productos.html">Todos los Productos</a></li>
 					            <li><a href="../productos/luces-exterior.html">Luces de Exterior</a></li>
@@ -22,8 +24,8 @@
 				            </ul>
 			            </li>
 			            <li class="first-li"><a href="../proyectos/proyectos.html">Proyectos</a></li>
-			            <li class="first-li"><a href="../index.html">Noticias</a></li>
-			            <li class="first-li"><a href="../index.html">Contactos</a></li>
+			            <li class="first-li"><a href="../index.html#news">Noticias</a></li>
+			            <li class="first-li"><a href="../index.html#message">Contactos</a></li>
 	          		</ul>
 	          	</nav>
           	</div>
