Se teminó completamente todo el index de noticia

--- a/Noticia/noticia.html
+++ b/Noticia/noticia.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <html>
 	<head>
 		<meta charset="UTF-8">
@@ -7,28 +9,28 @@
 	<body>
 		<header class="header-products">
 			<div class="nav-banner">
-				<a href="#"><img class="logo" src="../img/lailuminada.png"></a>
+				<a href="../index.html"><img class="logo" src="../img/lailuminada.png"></a>
 				<nav class="header-nav">
 					<ul class="first-nav">
 			            <li class="first-li"><a href="../index.html">Inicio</a></li>
-			            <li class="first-li"><a href="#">Productos</a>
+			            <li class="first-li"><a href="../index.html#product">Productos</a>
 				            <ul class="sub-menu">
-				            	<li><a href="../productos.html">Todos los Productos</a></li>
-					            <li><a href="../luces-exterior.html">Luces de Exterior</a></li>
-					            <li><a href="../luces-interior.html">Luces de interior</a></li>
-					            <li><a href="../luces-led.html">Luces led</a></li>
-					            <li><a href="../luces-habitacion.html">Luces de habitacion</a></li>   
+				            	<li><a href="../productos/productos.html">Todos los Productos</a></li>
+					            <li><a href="../productos/luces-exterior.html">Luces de Exterior</a></li>
+					            <li><a href="../productos/luces-interior.html">Luces de interior</a></li>
+					            <li><a href="../productos/luces-led.html">Luces led</a></li>
+					            <li><a href="../productos/luces-habitacion.html">Luces de habitacion</a></li>   
 				            </ul>
 			            </li>
 			            <li class="first-li"><a href="../proyectos/proyectos.html">Proyectos</a></li>
-			            <li class="first-li"><a href="#">Noticias</a></li>
-			            <li class="first-li"><a href="#">Contactos</a></li>
+			            <li class="first-li"><a href="../index.html#news">Noticias</a></li>
+			            <li class="first-li"><a href="../index.html#message">Contactos</a></li>
 	          		</ul>
 	          	</nav>
           	</div>
           	<section class="subsection subsection-infobox">
 				<div class="div-infobox">
-						<h2>Feria de La luz en el Barrio Chino</h2>
+					<h2>Feria de La luz en el Barrio Chino</h2>
 					<div class="div-infobox-title">
 						<img class="img-noticia" src="../img/b-chino-luz.jpg">
 					</div>
@@ -46,12 +48,12 @@
 				<a href="#">(111) 1111-1111</a></p>
 				<p><a href="#">lailuminada@gmail.com</a></p>
 			</div>
-			<a href="#" class="logo-central"><img class="logo-footer" src="../img/lailuminada.png"></a>
+			<a href="../index.html" class="logo-central"><img class="logo-footer" src="../img/lailuminada.png"></a>
 			<div class="social-network">
 				<ul>
-					<li class="foot-facebook"><a href="#">Facebook</a></li>
-					<li class="foot-twiter"><a href="#">Twitter</a></li>
-					<li class="foot-facebook"><a href="#">Other</a></li>
+					<li class="foot-facebook"><a href="https://es-es.facebook.com/">Facebook</a></li>
+					<li class="foot-twiter"><a href="https://twitter.com/?lang=es">Twitter</a></li>
+					<li class="foot-facebook"><a href="https://es-es.facebook.com/">Other</a></li>
 				</ul>
 			</div>
 		</footer>
