Se ajustó el index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			            <li class="first-li"><a href="#news">Noticias</a></li>
 			            <li class="first-li"><a href="#message">Contactos</a></li>
 	          		</ul>
-				</nav><!-- header-nav -->
+				</nav>
 			</div>
 			<div class="title-group">
 				<div class="title-header">
@@ -48,9 +48,9 @@
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 			Nullam eu orci placerat, posuere augue vehicula, semper leo.<br><br>Lorem ipsum dolor sit amet, ut imperdiet faucibus suscipit. Aenean sed gravida neque consectetur adipiscing elit. Nullam eu orci placerat, posuere augue vehicula, tristique urna accumsan, id consectetur odio interdum consectetur adipiscing elit.</p>
 			<img src="img/ligth-about.png">
-		</section>
+		</section><!-- subsection subsection-about -->
 
-		<section id="product" class="subsection subsection-products"><!-- es importante poner la clase subsection en cada sección -->
+		<section id="product" class="subsection subsection-products">
 			<h2>Productos</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
 			Nullam eu orci placerat, posuere augue vehicula, semper leo. ornare a condimentum id, egestas sed libero. Aenean sit amet risus sed nisi consequat molestie eget non mi. Vivamus faucibus lacinia ex. Ut commodo sit amet nulla non auctor. Praesent sit amet rhoncus nisi, et imperdiet metus. 
@@ -167,7 +167,7 @@
 					<p>Cras eget dui nibh. Mauris egestas diam id risus varius, vitae elementum elit condimentum. Vivamus rhoncus scelerisque lectus, quis elementum risus scelerisque in. In vehicula sem eget lacinia fringilla. Etiam tempor sem sem, a malesuada erat tristique at. Nullam lobortis mauris sit amet tortor finibus, sed ullamcorper lorem pharetra. Mauris consectetur hendrerit orci, eget lobortis tortor euismod quis.</p>
 				</div>
 			</div>
-		</section>
+		</section><!-- subsection subsection-infobox -->
 		<section id="message" class="subsection subsection-contacts">
 			<h2>Contáctenos</h2>
 			<p>Del perro Hechado 10mts al Norte, por el palo de Mango, Cerca de la Casa Roja de Doña Adela, <br/>
@@ -179,7 +179,7 @@
 				<textarea placeholder="Mensaje"></textarea>
 				<p class="header-button"><a class="button-products" href="#">Enviar</a></p>
 			</div>
-		</section>
+		</section><!-- subsection subsection-contacts -->
 		<footer>
 			<div class="contacts">
 				<p><a href="#">(000) 0000-0000</a><br/>
