Se terminaron los últimos ajustes en css e index

--- a/index.html
+++ b/index.html
@@ -173,12 +173,12 @@
 			<p>Del perro Hechado 10mts al Norte, por el palo de Mango, Cerca de la Casa Roja de Doña Adela, <br/>
 			San Gargarito Arrinconado Centro.</p>
 
-			<div class="div-contacts">
-				<input type="text" placeholder="Nombre">
-				<input type="e-mail" placeholder="E-mail">
-				<textarea placeholder="Mensaje"></textarea>
-				<p class="header-button"><a class="button-products" href="#">Enviar</a></p>
-			</div>
+			<form class="div-contacts">
+				<input class="forms" type="text" placeholder="Nombre" required>
+				<input class="forms" autocomplete type="email" placeholder="E-mail" required>
+				<textarea class="forms forms-textarea" placeholder="Mensaje" required></textarea>
+				<p class="header-button"><input type="submit" class="button-products" value="Enviar"></p>
+			</form>
 		</section><!-- subsection subsection-contacts -->
 		<footer>
 			<div class="contacts">
